2nd training/Community/Community/Community1/force-app/main/default/objects/FreightCalc_Airfreight__c/FreightCalc_Airfreight__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Freight Calculator Airfreight Products</description>
    <label>FreightCalc_Airfreight</label>
</CustomObject>