2nd training/Community/Community/Community1/force-app/main/default/objects/FreightCalc_Airfreight__c/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <description>Price / Rate</description>
    <label>Price</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>