2nd training/Community/Community/Community1/force-app/main/default/objects/FreightCalc_Airfreight__c/fields/Weight__c.field-meta.xml
<CustomField>
    <fullName>Weight__c</fullName>
    <description>Chargeable Weight</description>
    <inlineHelpText>Chargeable Weight</inlineHelpText>
    <label>Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>